// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SentryBoundary error handling 1`] = `
<DocumentFragment>
  Example content
</DocumentFragment>
`;

exports[`SentryBoundary error handling 2`] = `
<DocumentFragment>
  <span
    data-component="SentryError"
    data-props="{}"
  />
</DocumentFragment>
`;

exports[`SentryBoundary rendering 1`] = `
<DocumentFragment>
  Example content
</DocumentFragment>
`;
